@@ -1,5 +1,10 @@
 Changes in libmpg123 libtool interface versions...
 
+40.0.40
+	- Bump for marking the first actual implementation of A-Law encoding.
+	  Not that it matters to anyone, though --- I wonder why not even the
+	  Asterisk users wanted this. It's for telephony, dammit!
+
 39.2.39
 	- Added more elaborate post-processing to enable 32 and 24 bit output also with low-precision decoder (16 bit, fixed-point).
 
